Update Diagnosis procedures in the installation guide